Fix white spacing issue

--- a/frontend/styles/globals.scss
+++ b/frontend/styles/globals.scss
@@ -2,11 +2,16 @@
 
 body {
   font-family: 'Lausanne', "Helvetica Neue", Helvetica, sans-serif;
-  // margin: 0;
-  // padding: 0;
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
 *, *::before, *::after {
   box-sizing: inherit;
+}
+
+html, body {
+  margin: 0;
+  padding: 0;
 }
